#### 2.7.0
Beta
* Add debug mode (WS)
* Upgrade tinymce 4.3.2 => 4.0.13
* Add web service admin api key (backend)
* Fix bug mega dropdown (skin default)
* Update WebService API
    * Add action params
    * Fix bug image upload (webservice)
    * Remove old img category (webservice)
    * Add subcategory in category (webservice)
    * Add image in subcategory (webservice)
    * Add product in subcategory (webservice)
    * Add prefix for image upload (webservice)
    * Fix bug add category with web service
    * list & Add product with web service
    * Fix schema get product (ws)
        * Fix add product (ws)
        * Update product (ws)
        * Add img gallery (ws)
        * Add product related (ws)
* Add webservice API
    * Fix getResult method (webservice)
    * Restructure API web service + comment api
    * Add system upload in webservice
    * Fix wsAuthKey (webservice)
    * Add SCRUD (webservice)
    * Add request json (Webservice)
* Fix temporary translate for country (frontend)
    * Add new brick for use with country
* Add widget country
* Finalize country Admin (new module)
    * Adapt template for country module
* Add redirect with js
* Add new translation variable (frontend)
* Update font awesome 4.5 => 4.6.1
* Add cookies consent (frontend)
* Add new method json return
    * Fix about with method json return
* Update news : Add archive system
* Prepare country module
Small changes on admin css
    * Légères corrections css dans l'admin:
        - Retrait bordure footer.
        - Ajout espacement entre footer et contenu.
* Mega Dropdown style (commit by Xarksass)
  Ajout du style mega dropdown pour le menu.
  Uniquement disponible sur le root du catalogue.
* Contact plugin update (commit by Xarksass)
    * Mise en place d'une configuration pour activer ou non les champs
    * relatifs à l'adresse et les rendre obligatoires ou non.
* Update About multi lang
* Add date option in news widget (frontend)
* Remove var_dump in lang tpl (frontend)